[package]
name = "crdt-list"
version = "0.1.2"
edition = "2021"
authors = ["zxch3n <remch183@outlook.com>"]
keywords = ["crdt", "distributed"]
description = "Abstract CRDTs for lists"
license = "MIT OR Apache-2.0"
include = ["Cargo.toml", "**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.1.6", optional = true, features = ["derive"] }
arref = "0.1.0"
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
color-backtrace = "0.5.1"
ctor = "0.1.23"

[features]
fuzzing = ["rand", "arbitrary"]
